[package]
name = "olc-pge"
version = "0.1.1"
authors = ["GreenDog72"]
description = "A reimplementation of the olcPixelGameEngine in Rust"
license = "OLC-3"
license-file = "LICENSE.md"
documentation = "https://docs.rs/olc-pge"
edition = "2018"

[dependencies]
image = "0.23.13"
minifb = "0.19.3"

[dev-dependencies]
rand = "0.8.3"
