[package]
name = "olc-pge"
version = "0.1.2"
authors = ["GreenDog72"]
description = "A reimplementation of the olcPixelGameEngine in Rust"
license-file = "LICENSE.md"
repository = "https://github.com/GreenDog72/olc-pge"
documentation = "https://docs.rs/olc-pge"
edition = "2018"

[dependencies]
image = "0.23.13"
minifb = "0.19.3"

[dev-dependencies]
rand = "0.8.3"
